--- a/services.html
+++ b/services.html
@@ -207,18 +207,37 @@
                     </a>
                 </div>
             </div>
-            <div class="slideshow-container"> <!-- Thêm thẻ cha -->
-                <div class="slideshow">
-                    <div class="list-images">
-                        <img src="photos/johnnyteacher.jpg" alt="johnnyteacher">
-                        <img src="photos/johnnyfarmer.png" alt="johnnyastro">
-                    </div>
-                    <div class="btns">
-                        <div class="btn-left">
-                            <ion-icon class="btn-left btn" name="chevron-back-outline"></ion-icon>
+            <div class="slideshow-parents">
+                <h1 class="tieude">Các mảnh đời</h1>
+                <div class="slideshow-container"> 
+                    <div class="slideshow">
+                        <div class="list-images">
+                            <div class="johnteach">
+                                <img width="800px" height="420px" src="photos/teach.jpg" alt="johnnyteacher">
+                                <div class="text1">
+                                    <h1>Nghị lực và kiên cường</h1>
+                                    <h2>Phép màu từ anh chàng bại não trở thành người thầy đáng kính!</h2>
+                                    <p>Johnny I. Sins người thầy giáo tận tâm và người chống tận tụy, bất ngờ gặp chấn thương não nghiêm trọng từ tai nạn xe hơi. Quyết tâm lấy lại khả năng vận động và quay lại ngôi trường đại học, ông đã tìm đến vật lý trị liệu để tìm câu trả lời. Thông qua các phương pháp điều trị có mục tiêu và phương pháp cá nhân. John đã khám phá ra sức mạnh biến đổi kì diệu của vật lý trị liệu trên con đường hướng tới sức khỏe của mình.</p>
+                                    <button>Tìm hiểu thêm</button>
+                                </div>
+                            </div>
+                            <div class="johnfarm">
+                                <img width="800px" height="420px" src="photos/farm.jpg" alt="johnnyastro">
+                                <div class="text2">
+                                    <h1>Hành trình vật lý trị liệu hậu phẫu thuật cắt bỏ chân</h1>
+                                    <p>Con đường hồi phục hậu phẫu thuật là một con đường đầy gian nan và câu chuyện của John II. Sins không phải ngoại lệ. Một phần trong con người ông nghĩ rằng có thể sẽ không bao giờ có thể lấy lại những thứ mang lại niềm vui trong cuộc sống. Tuy nhiên, thông qua chương trình vật lý trị liệu Sin II. đã lấy lại được cuộc sống.</p>
+                                    <button>Tìm hiểu thêm</button>
+                                </div>
+                            </div> 
+                            
                         </div>
-                        <div class="btn-right">
-                            <ion-icon class="btn-right btn" name="chevron-forward-outline"></ion-icon>
+                        <div class="btns">
+                            <div class="btn-left">
+                                <ion-icon class="btn-left btn" name="chevron-back-outline"></ion-icon>
+                            </div>
+                            <div class="btn-right">
+                                <ion-icon class="btn-right btn" name="chevron-forward-outline"></ion-icon>
+                            </div>
                         </div>
                     </div>
                 </div>
